--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 webGL-build.7z filter=lfs diff=lfs merge=lfs -text
 @legaltransactionV2 filter=lfs diff=lfs merge=lfs -text
+@legaltransactionv2.7z filter=lfs diff=lfs merge=lfs -text
